welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var temp=0
  var plop=1
  for (i<-1 to nums.length){
    if (temp==0) {temp=plop;plop=plop+1}
    temp=temp-1
  }
  return plop
}